# TopicTrace

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  GEMINI.md  TopicTrace_Architecture.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  ruff.toml  variables_review.md
data/neo4j/data/: server_id
docs/superpowers/plans/: 2026-05-19-topicttrace-tools.md  2026-06-09-entity-relationship-resolution.md
src/topictrace/: __init__.py  cache.py  session.py  settings.py
src/topictrace/agents/: graph.py  state.py
src/topictrace/db/: client.py
src/topictrace/prompts/: __init__.py  agent_system.py  answer_generator.py  grader_chunk_evaluator.py  research_agent.py  router_intent_classifier.py
src/topictrace/provider/: __init__.py  embedding.py  embeddingModelProvider.py  llm.py  llmProvider.py  rerank.py  voyageRerankProvider.py
src/topictrace/server/: app.py
src/topictrace/tools/: __init__.py  cache.py  registry.py  summarize.py  web_fetch.py  web_search.py
tests/: conftest.py  test_cache.py  test_deep_audit.py  test_integration.py  test_project_structure.py  test_session.py
tests/rag/documentIngestion/: __init__.py  test_entity_resolution.py  test_graph_extraction.py  test_graph_persistence.py  test_id_generation.py  test_ingestion_pipeline.py  test_parse_document.py  test_prompt_contracts.py
tests/rag/real_env_test/: __init__.py  run_real_env_test.py  run_retrieve_real_env_test.py  test_run_real_env_test.py
tests/rag/retrieve/: __init__.py  test_config.py  test_grader.py  test_grader_deep.py  test_graph_agent.py  test_rag_graph.py  test_retrieve_pipeline.py  test_retrieve_pipeline_deep.py  test_router.py  (+2 more)
tests/tools/: __init__.py  test_registry.py  test_summarize.py  test_web_fetch.py  test_web_search.py
(+50 files in other folders)
