[project]
name = "topictrace"
version = "0.1.0"
description = "Educational predictive analytics agent for exam prep"
requires-python = ">=3.10"
dependencies = [
    "tavily-python>=0.5.0",
    "requests>=2.31.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/topictrace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
