[project]
name = "topictrace"
version = "0.1.0"
description = "Educational predictive analytics agent for exam prep"
requires-python = ">=3.10"
dependencies = [
    "tavily-python>=0.5.0",
    "requests>=2.31.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "httpx>=0.27.0",
    "langgraph>=1.2.2",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "psycopg[binary]>=3.3.4",
    "psycopg-pool>=3.3.1",
    "llama-cloud>=2.0.0",
    "transformers>=4.40.0",
    "langchain-text-splitters>=0.3.0",
    "rapidfuzz>=3.9.0",
    "pytest>=8.0.0",
    "respx>=0.21.0",
    "neo4j>=5.0.0",
    "structlog>=23.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/topictrace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
